kubernetes/apps/media/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  labels:
    homelab.mpdavis.com/exposure: tailnet
spec:
  entryPoints:
    - tailnet
  routes:
    - match: Host(`sonarr.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
      services:
        - name: sonarr
          port: 8989
  tls: {}
